--- a/views/news.ejs
+++ b/views/news.ejs
@@ -139,5 +139,4 @@
 
 
 <%- include('partials/chatbot') %>
-<%- include('partials/footer'); %>
-<script src="/js/public.js"></script>
+<%- include('partials/footer'); %><script src="/js/public.js"></script>
