--- a/views/programs.ejs
+++ b/views/programs.ejs
@@ -148,5 +148,4 @@
 </script>
 
 <%- include('partials/footer'); %>
-<%- include('partials/chatbot') %>
-<script src="/js/public.js"></script>
+<%- include('partials/chatbot') %><script src="/js/public.js"></script>
