--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -131,7 +131,7 @@
     </div>
     <div class="address-container text-center" data-scroll>
       <p class="physical-address">
-        <strong>Address:</strong> 10-4-13/11/A/5/1, MG Nagar, Owaisi Pura, Masab Tank, Hyderabad, Telangana 500028
+        <strong>Address:</strong> 10-4-13/11/A/5/1, MG Nagar, Masab Tank, Hyderabad, Telangana 500028
       </p>
     </div>
   </div>
